# g1-with-brainco-hand

./: .gitignore  README.md  apple_table_scene.xml  feedback_no_silent_file_changes.md  g1_fixed.urdf  g1_fixed.xml  g1_fixed_floating.urdf  g1_fixed_floating.xml  g1_fixed_manipulation.xml  g1_walk_scene.xml  modality_config.py  project_gr00t_mujoco_pick_integration.md  pyproject.toml  requirements.txt  run_simulation.py  run_wbc_mujoco.py  test_asset.urdf  test_compile.py  test_robot.urdf  train_g1_jump.py  visualize_ego.py  visualize_g1.py  vla_env.py  vla_inference.py
assets/robots/: g1_29dof_mode_15_brainco_hand.urdf  g1_fixed.urdf  g1_fixed.xml  g1_fixed_floating.urdf  g1_fixed_floating_scene.urdf
config/: modality_config.py  robot_params.yaml
isaac-groot-env/: pyproject.toml
model_policy/: README.md
revise/: MUJOCO_LOG.TXT
scenes/mujoco/: apple_table_scene.xml  g1_walk_scene.xml  rubiks_cube_scene.xml  test_scene.xml
scripts/: eval_navigation.py  eval_navigation_backward_walk_example.py  eval_navigation_fixed_goals_example.py  gr00t_pick_rubiks_cube.py  navigate.py  run_simulation.py  run_wbc_mujoco.py  study_ copy_of_train_g1_jump.py  train_g1_jump.py  train_g1_navigate.py  train_g1_navigate_backward_walk_example.py  train_g1_navigate_fixed_goals_example.py  visualize_ego.py  visualize_g1.py  vla_inference.py  walk_with_cameras.py
src/g1_control/: __init__.py  lidar.py  vla_env.py  vla_env_gr00t.py
